CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(point-and-line LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_FLAGS -fPIC)

SET(CMAKE_AUTOMOC ON)

FIND_PACKAGE(Qt6 REQUIRED COMPONENTS Core Gui Widgets)

FILE(GLOB_RECURSE source "*.h" "*.cc")
SET(core_src ${source})
LIST(FILTER core_src INCLUDE REGEX "src")

QT_ADD_EXECUTABLE(ch01 ${core_src} main.cc)

SET_TARGET_PROPERTIES(ch01 PROPERTIES
    WIN32_EXECUTABLE TRUE
    MACOSX_BUNDLE TRUE
    )

TARGET_LINK_LIBRARIES(ch01 PUBLIC
    Qt::Core
    Qt::Gui
    Qt::Widgets
    )